Changed grass block sifting recipe to use string mesh instead of andesite mesh.
Changed dirt sifting recipe to use string mesh instead of andesite mesh.
Expanded crushed netherrack sifting to use multiple mesh tiers with increasing chances for fungi, roots, raw gold, and netherite scrap.
Added loot crate drops to specified mobs with defined chances for various dungeon and bastion structures.
Added Nether Themed Keys for End Game.
Added recipe removals for Immersive Engineering plate hammering and raw hammer crushing for multiple materials in expert pack mode.
Added diorite and granite pebbles.
Added recipe for Powder Snow Bucket.

Updated Alpha (Overworld) Questline.
Updated Pam's Harvestcraft Questline.
Added Trial Chamber Questline.
Added Nether Questline.
Added End Questline.
Updated Beta (Create) Questline.
Added Create Sifting Questline.
Removed Gateways to Eternity Questline.
Added Endgame Questline (Not yet fully implemented).
Added Omega Quest Chapter.

Added Bastion Loot Crate.
Added End City Loot Crate.
Added Ancient City Loot Crate.
Added Pillager Outpost loot crate.
Added Nether Fortress Loot Crate.

Added Create Mechanical Extruder (will be removing Cobblegen Galore in next update).

Added create mechanical extruder recipes.

Removed Gateways to Eternity.

Updated Almost Unified.
Updated Apothic Attributes.
Updated Applied Energistics 2.
Updated Balm.
Updated Create.
Updated Create Mechanical Extruder.
Updated Create Sifting.
Updated Cucumber Library.
Updated Default World Type [Forge].
Updated Entity Culling Fabric/Forge.
Updated FTB Filter System.
Updated FTB Library (Forge).
Updated FTB Quests (Forge).
Updated FTB Ultimine (Forge).
Updated FTB XMod Compat.
Updated Generator Galore.
Updated GuideME.
Updated Immersive Engineering.
Updated Jade 🔍.
Updated JourneyMap.
Updated Just Enough Items (JEI).
Updated LootJS: KubeJS Addon.
Updated Mechanicals Lib.
Updated ModernFix.
Updated Moonlight Lib.
Updated Mystical Agradditions.