@@ -16,6 +16,7 @@
         "overworld",
         "piglin",
         "purpur",
-        "shulker"
+        "shulker",
+        "soulium"
     ]
 }
