@@ -1,0 +1,7 @@
+[armor_effects]
+	#Increased effects level for echo armor (boolean, default = true)
+	strong_armor = true
+
+[sword_effects]
+	#Increased effects level for echo sword (boolean, default = true)
+	strong_sword = true
