@@ -12,6 +12,7 @@
 			-8496068
 			-16777216
 			-8519680
+			-9550819
 		]
 	}
 	sidebar: {
